# url-shortner

./: .env-example  .gitignore  Cargo.toml  Makefile  PROJECT_SETUP_GUIDE.md  README.md  ROADMAP.md  _typos.toml  clippy.toml  docker-compose.yml  init.sql  rustfmt.toml
.githooks/: README.md  pre-push  setup.sh
.github/workflows/: ci.yml
features/: 1-core-features-implementation.md  2-analytics-metrics-implementation.md  3-web-portal-frontend-implementation.md  4-security-compliance-implementation.md  5-infrastructure-devops-implementation.md  6-api-integration-implementation.md  7-performance-scalability-implementation.md  8-developer-experience-implementation.md  CHANGELOG.md  ROADMAP.md  analytics-implementation.md
src/: database.rs  lib.rs  main.rs  rate_limiting.rs  server.rs  shortener.rs  validation.rs
src/application/dto/: requests.rs  responses.rs
src/application/use_cases/: mod.rs  shorten_url.rs
src/domain/: mod.rs  validation.rs
src/domain/entities/: account_deletion_token.rs  click.rs  mod.rs  password_reset_token.rs  short_code.rs  url.rs  user.rs
src/domain/repositories/: account_deletion_token_repository.rs  click_repository.rs  mod.rs  password_reset_repository.rs  url_repository.rs  user_repository.rs
src/domain/services/: anonymization_service.rs  auth_service.rs  bulk_processor.rs  cleanup_service.rs  click_tracking_service.rs  file_upload_service.rs  mod.rs  notification_service.rs  password_reset_service.rs  privacy_service.rs  profile_validation_service.rs  progress_service.rs  token_validation_service.rs  url_service.rs
src/infrastructure/: mod.rs  password_reset_rate_limiter.rs  rate_limiting.rs  server.rs  test_utils.rs
src/infrastructure/config/: app_config.rs  database_config.rs  mod.rs  rate_limit_config.rs
src/infrastructure/database/: mod.rs  postgres_account_deletion_token_repository.rs  postgres_password_reset_repository.rs  postgres_repository.rs  postgres_user_repository.rs
src/infrastructure/email/: email_sender.rs  mod.rs  (+1 more)
tests/: integration_test.rs  mod.rs
tests/unit/: mod.rs  test_database.rs  test_main.rs  test_server.rs  test_shortener.rs
(+128 files in other folders)
