[package]
name = "url-shortner"
version = "0.1.0"
edition = "2021"

[dependencies]
seahash = "4.1.0"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
utoipa-axum = "0.1"
url = "2.5"
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0"
governor = "0.6"
tower-http = { version = "0.5", features = ["cors", "limit", "trace", "compression-br", "compression-gzip", "compression-deflate"] }
tower = { version = "0.4", features = ["full"] }
async-trait = "0.1"
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
